--- a/index.html
+++ b/index.html
@@ -14,10 +14,12 @@
 <body>
 
     <div class="card">
-        <div class="card-body">
+        <div class="card-header">
             <h1>
                 titolo bello
             </h1>
+        </div>
+        <div class="card-body">
             <p>
                 Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tenetur, nulla molestiae quam et quod
                 perferendis.
