--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
 <body>
 
     <div class="card-body">
+        <div class="card-img">
+            <img style="max-width: 100%;" src="./img/gelato-fatto-in-casa.jpg" alt="img">
+        </div>
         <h1>
             titolo bello
         </h1>
