--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
             Aliquam ipsum eos, velit dolore vitae iste sit incidunt recusandae nesciunt commodi at architecto corporis!
         </p>
     </div>
+    <div class="card-footer">
+        <button type="button" class="btn btn-primary">Primary</button>
+    </div>
 
 </body>
 
