--- a/index.html
+++ b/index.html
@@ -49,6 +49,9 @@
             </div>
         </div>
     </div>
+    <div class="card-footer">
+        <button type="button" class="btn btn-primary">Primary</button>
+    </div>
 
    
 
