--- a/index.html
+++ b/index.html
@@ -21,6 +21,13 @@
             Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tenetur, nulla molestiae quam et quod perferendis.
             Aliquam ipsum eos, velit dolore vitae iste sit incidunt recusandae nesciunt commodi at architecto corporis!
         </p>
+        <ul>
+            <li><i class="fa-solid fa-house"></i></li>
+            <li><i class="fa-solid fa-earth-americas"></i></li>
+            <li><i class="fa-solid fa-wifi"></i></li>
+
+        </ul>
+
     </div>
 
 </body>
