--- a/index.html
+++ b/index.html
@@ -14,14 +14,17 @@
 <body>
 
     <div class="card">
-        <div class="card-img">
-            <img style="max-width: 100%;" src="./img/gelato-fatto-in-casa.jpg" alt="img">
+
+        <div class="card-header">
+            <h1>
+                titolo bello
+            </h1>
         </div>
-        <h1>
-            titolo bello
-        </h1>
 
         <div class="card-body">
+            <div class="card-img">
+                <img style="max-width: 100%;" src="./img/gelato-fatto-in-casa.jpg" alt="img">
+            </div>
             <p>
                 Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tenetur, nulla molestiae quam et quod
                 perferendis.
