--- a/index.html
+++ b/index.html
@@ -13,17 +13,24 @@
 
 <body>
 
-    <div class="card-body">
-        <h1>
-            titolo bello
-        </h1>
-        <p>
-            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tenetur, nulla molestiae quam et quod perferendis.
-            Aliquam ipsum eos, velit dolore vitae iste sit incidunt recusandae nesciunt commodi at architecto corporis!
-        </p>
-    </div>
-    <div class="card-footer">
-        <button type="button" class="btn btn-primary">Primary</button>
+    <div class="card">
+        <div class="card-header">
+            <h1>
+                titolo bello
+            </h1>
+        </div>
+        <div class="card-body">
+            <p>
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tenetur, nulla molestiae quam et quod
+                perferendis.
+                Aliquam ipsum eos, velit dolore vitae iste sit incidunt recusandae nesciunt commodi at architecto
+                corporis!
+            </p>
+        </div>
+        <div class="card-footer">
+            <button type="button" class="btn btn-primary">Primary</button>
+        </div>
+
     </div>
 
 </body>
