--- a/index.html
+++ b/index.html
@@ -13,15 +13,25 @@
 
 <body>
 
-    <div class="card-body">
-        <h1>
-            titolo bello
-        </h1>
-        <p>
-            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tenetur, nulla molestiae quam et quod perferendis.
-            Aliquam ipsum eos, velit dolore vitae iste sit incidunt recusandae nesciunt commodi at architecto corporis!
-        </p>
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-6">
+
+                <div class="card-body">
+                    <h1>
+                        titolo bello
+                    </h1>
+                    <p>
+                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tenetur, nulla molestiae quam et quod perferendis.
+                        Aliquam ipsum eos, velit dolore vitae iste sit incidunt recusandae nesciunt commodi at architecto corporis!
+                    </p>
+                </div>
+
+            </div>
+        </div>
     </div>
+
+   
 
 </body>
 
